# klyk

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  release.sh  requirements.txt
.github/workflows/: publish-pypi.yml
klyk/: __init__.py  activity.py  ax_roles.py  capture.py  cli.py  client.py  clients.py  computer.py  doctor.py  grader.py  keycodes.py  launcher.py  logs.py  matcher.py  mcp_server.py  menubar.py  ocr.py  ownership.py  reporter.py  session.py  skylight.py  ui_thread.py  updates.py  visibility.py
